<resources>
    <string name="app_name">MyPizzaApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aniket\'s Pizza</string>
    <string name="nav_header_subtitle">Best Pizza Here</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="order">Order</string>
    <string name="view_menu">Menu</string>
    <string name="todays_offer">Todays Offfer</string>
    <string name="extras">Extras</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_app">Rate Us</string>
    <string name="title_activity_menu_item">MenuItem</string>
</resources>
