<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/order"
            android:title="@string/order" />
        <item
            android:id="@+id/view_menu"
            android:title="@string/view_menu" />
        <item
            android:id="@+id/todays_offer"
            android:title="@string/todays_offer" />
        <item
            android:id="@+id/extras"
            android:title="@string/extras" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/rate_app"
                android:title="@string/rate_app" />
        </menu>
    </item>

</menu>
