<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/order">

    <fragment
        android:id="@+id/order"
        android:name="com.example.mypizzaapp.ui.order.HomeFragment"
        android:label="@string/order"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/view_menu"
        android:name="com.example.mypizzaapp.ui.gallery.GalleryFragment"
        android:label="@string/view_menu"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/todays_offer"
        android:name="com.example.mypizzaapp.ui.slideshow.SlideshowFragment"
        android:label="@string/todays_offer"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/extras"
        android:name="com.example.mypizzaapp.ui.tools.ToolsFragment"
        android:label="@string/extras"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/contact_us"
        android:name="com.example.mypizzaapp.ui.share.ShareFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/rate_app"
        android:name="com.example.mypizzaapp.ui.send.SendFragment"
        android:label="@string/rate_app"
        tools:layout="@layout/fragment_send" />
</navigation>